deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ProjectName-deployment
spec:
  selector:
    matchLabels:
      app: ProjectName
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: ProjectName
    spec:
      containers:
      - name: ProjectName
        image: iad.ocir.io/sc30001/ProjectName-image:VersionTag
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
