service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ProjectName-clusterip
  labels:
    app: ProjectName
spec:
  type: ClusterIP
  ports:
  - port: 8088
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ProjectName
