ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ProjectName-ingress
  namespace: default
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /ProjectName
        backend:
            serviceName: ProjectName-clusterip
            servicePort: 8088
